src/test/ui/rfc-2005-default-binding-mode/for.stderr
error[E0009]: cannot bind by-move and by-ref in the same pattern
  --> $DIR/for.rs:6:13
   |
LL |     for (n, mut m) in &tups {
   |          -  ^^^^^ by-move pattern here
   |          |
   |          both by-ref and by-move used

error: aborting due to previous error

For more information about this error, try `rustc --explain E0009`.
